nldl_derive/tests/ui/deserializable/nla-type-overflow-fails.stderr
error[E0080]: evaluation of constant value failed
 --> tests/ui/deserializable/nla-type-overflow-fails.rs:7:16
  |
7 |     #[nla_type(u16::MAX + 1)]
  |                ^^^^^^^^^^^^ attempt to compute `u16::MAX + 1_u16`, which would overflow
